--- a/Activities/Week 15-Sequalize/11-Post-Model/Unsolved/config/config.json
+++ b/Activities/Week 15-Sequalize/11-Post-Model/Unsolved/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "password",
     "database": "blogger",
     "host": "127.0.0.1",
     "port": 3306,
@@ -9,16 +9,16 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "password",
+    "database": "blogger",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "password",
+    "database": "blogger",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
